--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import 'config';
+@import 'menu';
 
 * {
     box-sizing: border-box;
@@ -20,11 +21,11 @@ h1, h2, h3 {
     font-weight: 400;
 
     &.lg-heading {
-        font-size: 4rem;
+        font-size: 3rem;
     }
     
     &.sm-heading {
-        font-size: 2rem;
+        font-size: 1rem;
         padding: 0.2rem 1rem;
         background: rgba(lighten($primary-color, 2), 0.5);
     }
